--- a/Doctors/app/src/main/res/layout/login_activity.xml
+++ b/Doctors/app/src/main/res/layout/login_activity.xml
@@ -81,7 +81,8 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp">
+                android:layout_marginEnd="5dp"
+                android:visibility="gone">
 
                 <View
                     android:layout_width="0dp"
